[gd_scene load_steps=3 format=3 uid="uid://d3tanepjfx6hn"]

[ext_resource type="PackedScene" uid="uid://bg40a5ub67s4q" path="res://UI/components/color_select.tscn" id="1_avy6c"]
[ext_resource type="Script" uid="uid://cgtxbn7na68gh" path="res://UI/components/color_selector.gd" id="1_nno4d"]

[node name="ColorSelector" type="PanelContainer"]
clip_contents = true
script = ExtResource("1_nno4d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Title"
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Color_SelectR" parent="VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource("1_avy6c")]
unique_name_in_owner = true
layout_mode = 2
title = "R"
color_value = 0

[node name="Color_SelectG" parent="VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource("1_avy6c")]
unique_name_in_owner = true
layout_mode = 2
title = "G"
color_value = 1

[node name="Color_SelectB" parent="VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource("1_avy6c")]
unique_name_in_owner = true
layout_mode = 2
title = "B"
color_value = 2

[node name="preview" type="ColorRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
